--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
   <body>
     <select class="breed-select"></select>
     <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+    <p class="error">
+      Oops! Something went wrong! Try reloading the page!<span
+        class="loader__anim"
+      ></span>
+    </p>
     <div class="cat-info"></div>
 
     <script src="js/index.js" type="module"></script>
