--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <select class="breed-select"></select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">
+    <p class="loader is-hidden">Loading data, please wait...</p>
+    <p class="error is-hidden">
       Oops! Something went wrong! Try reloading the page!<span
-        class="loader__anim"
+        class="loader__anim is-hidden"
       ></span>
     </p>
     <div class="cat-info"></div>
