--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <select class="breed-select"></select>
-    <p class="loader is-hidden">Loading data, please wait...</p>
+    <p class="loader is-hidden"><span
+        class="loader__anim"
+      ></span>Loading data, please wait...</p>
     <p class="error is-hidden">
-      Oops! Something went wrong! Try reloading the page!<span
-        class="loader__anim is-hidden"
-      ></span>
+      Oops! Something went wrong! Try reloading the page!
     </p>
     <div class="cat-info"></div>
 
